# file_sorter

./: CMakeLists.txt  Main.qml  fileio.cpp  fileio.h  main.cpp
